--- a/environmentstest/application.properties
+++ b/environmentstest/application.properties
@@ -1,8 +1,11 @@
 #Grails Metadata file
-#Tue Feb 08 20:36:23 CET 2011
+#Tue Feb 08 20:40:07 CET 2011
 app.grails.version=1.3.6
 app.name=environmentstest
 app.servlet.version=2.4
 app.version=0.1
+plugins.dynamic-controller=0.2.1
+plugins.google-visualization=0.2.4
 plugins.hibernate=1.3.6
+plugins.jquery=1.4.4.1
 plugins.tomcat=1.3.6
